--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "puredocs",
   "version": "0.0.1",
   "description": "PureDocs — framework-agnostic Web Components OpenAPI portal",
+  "license": "SEE LICENSE IN LICENSE",
   "type": "module",
   "main": "dist/puredocs.umd.cjs",
   "module": "dist/puredocs.js",
@@ -29,6 +30,7 @@
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
+    "@types/js-yaml": "^4.0.9",
     "typescript": "^5.7.0",
     "vite": "^6.1.0",
     "vite-plugin-dts": "^4.5.0"
