--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "PureDocs — framework-agnostic Web Components OpenAPI portal",
   "author": "esurkov1",
   "license": "SEE LICENSE IN LICENSE",
-  "homepage": "https://github.com/esurkov1/puredocs#readme",
+  "homepage": "https://github.com/esurkov1/puredocs",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/esurkov1/puredocs.git"
@@ -23,14 +23,26 @@
     "rest-api"
   ],
   "type": "module",
-  "main": "dist/puredocs.umd.cjs",
-  "module": "dist/puredocs.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/server.cjs",
+  "module": "dist/server.js",
+  "types": "dist/server.d.ts",
+  "unpkg": "dist/puredocs.umd.js",
+  "jsdelivr": "dist/puredocs.umd.js",
   "exports": {
     ".": {
+      "types": "./dist/server.d.ts",
+      "import": "./dist/server.js",
+      "require": "./dist/server.cjs"
+    },
+    "./server": {
+      "types": "./dist/server.d.ts",
+      "import": "./dist/server.js",
+      "require": "./dist/server.cjs"
+    },
+    "./web": {
       "types": "./dist/index.d.ts",
       "import": "./dist/puredocs.js",
-      "require": "./dist/puredocs.umd.cjs"
+      "require": "./dist/puredocs.cjs"
     },
     "./style.css": "./dist/puredocs.css"
   },
@@ -41,7 +53,7 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "vite build && tsc --emitDeclarationOnly",
+    "build": "vite build && vite build -c vite.server.config.ts && tsc --emitDeclarationOnly",
     "preview": "vite preview",
     "typecheck": "tsc --noEmit"
   },
@@ -51,6 +63,7 @@
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
+    "@types/node": "^22.13.10",
     "typescript": "^5.7.0",
     "vite": "^6.1.0",
     "vite-plugin-dts": "^4.5.0"
