--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -48,7 +48,7 @@ jobs:
         run: |
           mkdir -p _site/assets/img _site/demo/assets
           cp apps/landing/index.html _site/index.html
-          cp apps/landing/assets/img/image1.png apps/landing/assets/img/image2.png apps/landing/assets/img/image3.png _site/assets/img/
+          cp apps/landing/assets/img/image1.png apps/landing/assets/img/image2.png apps/landing/assets/img/image3.png apps/landing/assets/img/logo.svg _site/assets/img/
           cp apps/demo/index.html _site/demo/index.html
           cp apps/demo/public/sample-spec.json _site/demo/sample-spec.json
           cp dist/puredocs.umd.js dist/puredocs.css _site/demo/assets/
